# A2DP-Commander

./: .gitignore  CHANGELOG.md  README-en.md  README.md  build.bat
encoder-service/: Cargo.toml  build.bat  build.ps1  build.rs
encoder-service/src/: ipc.rs  main.rs
encoder-service/src/audio/: capture.rs  mod.rs  resampler.rs
encoder-service/src/encoder/: aptx.rs  aptx_ffi.rs  ldac.rs  ldac_ffi.rs  mod.rs  sbc.rs
encoder-service/src/output/: file.rs  mod.rs  usb_audio.rs
src/A2DPCommander/: A2DPCommander.csproj  App.xaml.cs
src/A2DPCommander/Localization/: LocalizeExtension.cs  Strings.cs
src/A2DPCommander/Models/: BackupData.cs  BufferSizeInfo.cs  FeatureId.cs  FeatureState.cs  LatencyInfo.cs  TransitionConfig.cs  WifiAdapterInfo.cs
src/A2DPCommander/Models/Backups/: DevicePropertyBackup.cs  EncoderServiceBackup.cs  NoOpBackup.cs  PolicyConfigBackup.cs  RegistryBackup.cs  TransitionConfigBackup.cs  WifiCoexistenceBackup.cs
src/A2DPCommander/Native/: AudioClient3.cs  SetupApi.cs
src/A2DPCommander/Services/: AudioEndpointService.cs  AudioLatencyService.cs  BluetoothAdapterService.cs  BluetoothService.cs  EncoderService.cs  IAudioEndpointService.cs  IAudioLatencyService.cs  IEncoderService.cs  IProfileManager.cs  IRegistryService.cs  IWifiAdapterService.cs  ProfileManager.cs  RegistryService.cs  WifiAdapterService.cs
src/A2DPCommander/Services/Features/: FeatureConflicts.cs  FeatureManager.cs  IFeatureHandler.cs  (+1 more)
src/A2DPCommander/ViewModels/: DiagnosticsViewModel.cs  MainViewModel.cs
src/A2DPCommander/Views/: DiagnosticsWindow.xaml  MainWindow.xaml
(+7 files in other folders)
