[package]
name = "a2dp-encoder"
version = "0.1.0"
edition = "2021"
description = "LDAC/aptX encoder service for A2DP Commander"
authors = ["A2DP Commander"]

[dependencies]
# Windows audio capture
wasapi = "0.14"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "Win32_Security",
] }

# IPC with C# host
interprocess = { version = "2.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }

# Audio processing
rubato = "0.15"  # Resampling
dasp = "0.11"    # Digital audio signal processing

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
